--- a/RhythmicRealm/RhythmicRealm.UI/Views/Shared/_HeaderPartial.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/Shared/_HeaderPartial.cshtml
@@ -116,11 +116,11 @@
 									</a>
 
 								</div>
-								
+						<vc:cart></vc:cart>
 							}
 
 
-							@* <vc:wishlist></vc:wishlist> *@
+							
 							<!-- Menu Toogle -->
 							<div class="menu-toggle">
 								<a href="#">
