relatedproducts view is completed.

--- a/RhythmicRealm/RhythmicRealm.UI/Views/ProductDetails/Index.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/ProductDetails/Index.cshtml
@@ -8,51 +8,24 @@
 	<!-- container -->
 	<div class="container">
 		<!-- row -->
-		<div class="row">
+		<div class="row ">
 			<!-- Product main img -->
-			<div class="col-md-5 col-md-push-2">
+			<div class="col-md-5 col-md-push-0">
 				<div id="product-main-img">
 					<div class="product-preview">
 						<img src="~/images/products/@Model.ImageUrl" alt="">
 					</div>
 
-					<div class="product-preview">
-						<img src="~/images/products/@Model.ImageUrl" alt="">
-					</div>
-
-					<div class="product-preview">
-						<img src="~/images/products/@Model.ImageUrl" alt="">
-					</div>
-
-					<div class="product-preview">
-						<img src="~/images/products/@Model.ImageUrl" alt="">
-					</div>
 				</div>
 			</div>
 			<!-- /Product main img -->
 			<!-- Product thumb imgs -->
 			<div class="col-md-2  col-md-pull-5">
-				<div id="product-imgs">
-					<div class="product-preview">
-						<img src="~/ui/img/product01.png" alt="">
-					</div>
-
-					<div class="product-preview">
-						<img src="~/ui/img/product03.png" alt="">
-					</div>
-
-					<div class="product-preview">
-						<img src="~/ui/img/product06.png" alt="">
-					</div>
-
-					<div class="product-preview">
-						<img src="~/ui/img/product08.png" alt="">
-					</div>
-				</div>
+				
 			</div>
-			<!-- /Product thumb imgs -->
+		
 			<!-- Product details -->
-			<div class="col-md-5">
+			<div class="col-md-4">
 				<div class="product-details">
 					<h2 class="product-name">@Model.Name</h2>
 					<div>
@@ -72,15 +45,14 @@
 					<p>@Model.Description</p>
 
 					<div class="add-to-cart">
-						<div class="qty-label">
-							Qty
-							<div class="input-number">
-								<input type="number" value="1">
-								<span class="qty-up">+</span>
-								<span class="qty-down">-</span>
+						
+						<form asp-area="" asp-controller="Basket" asp-action="AddToBasket" method="post">
+							<input type="hidden" name="productId" value="@Model.Id" />
+							<input type="hidden" name="quantity" value="1" />
+							<div class="add-to-cart">
+								<button type="submit" class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> Sepete Ekle</button>
 							</div>
-						</div>
-						<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> Sepete Ekle</button>
+						</form>
 					</div>
 
 					<ul class="product-btns">
@@ -103,7 +75,7 @@
 				<div id="product-tab">
 					<!-- product tab nav -->
 					<ul class="tab-nav">
-						<li class="active"><a data-toggle="tab" href="#tab1">Description</a></li>
+						<li class="active"><a data-toggle="tab" href="#tab1">Teknik Özellikler</a></li>
 						<li><a data-toggle="tab" href="#tab3">Reviews (3)</a></li>
 					</ul>
 					<!-- /product tab nav -->
@@ -123,7 +95,7 @@
 						<div id="tab3" class="tab-pane fade in">
 							<div class="row">
 								<!-- Rating -->
-								<div class="col-md-3">
+								<div class="col-md-6">
 									<div id="rating">
 										<div class="rating-avg">
 											<span>4.5</span>
@@ -208,7 +180,7 @@
 								<!-- Reviews -->
 								<div class="col-md-6">
 									<div id="reviews">
-										<ul class="reviews">
+										<ul class="Değerlendirmeler">
 											<li>
 												<div class="review-heading">
 													<h5 class="name">John</h5>
@@ -258,38 +230,10 @@
 												</div>
 											</li>
 										</ul>
-										<ul class="reviews-pagination">
-											<li class="active">1</li>
-											<li><a href="#">2</a></li>
-											<li><a href="#">3</a></li>
-											<li><a href="#">4</a></li>
-											<li><a href="#"><i class="fa fa-angle-right"></i></a></li>
-										</ul>
+										
 									</div>
 								</div>
-								<!-- /Reviews -->
-								<!-- Review Form -->
-								<div class="col-md-3">
-									<div id="review-form">
-										<form class="review-form">
-											<input class="input" type="text" placeholder="Your Name">
-											<input class="input" type="email" placeholder="Your Email">
-											<textarea class="input" placeholder="Your Review"></textarea>
-											<div class="input-rating">
-												<span>Your Rating: </span>
-												<div class="stars">
-													<input id="star5" name="rating" value="5" type="radio"><label for="star5"></label>
-													<input id="star4" name="rating" value="4" type="radio"><label for="star4"></label>
-													<input id="star3" name="rating" value="3" type="radio"><label for="star3"></label>
-													<input id="star2" name="rating" value="2" type="radio"><label for="star2"></label>
-													<input id="star1" name="rating" value="1" type="radio"><label for="star1"></label>
-												</div>
-											</div>
-											<button class="primary-btn">Submit</button>
-										</form>
-									</div>
-								</div>
-								<!-- /Review Form -->
+								
 							</div>
 						</div>
 						<!-- /tab3  -->
@@ -302,143 +246,10 @@
 		<!-- /row -->
 	</div>
 	<!-- /container -->
+	@await Component.InvokeAsync("RelatedProducts", new { subCategoryId = @Model.SubCategory.Id })
 </div>
 <!-- /SECTION -->
-<!-- Section -->
-<div class="section">
-	<!-- container -->
-	<div class="container">
-		<!-- row -->
-		<div class="row">
 
-			<div class="col-md-12">
-				<div class="section-title text-center">
-					<h3 class="title">Benzer Ürünler</h3>
-				</div>
-			</div>
-
-			<!-- product -->
-			<div class="col-md-3 col-xs-6">
-				<div class="product">
-					<div class="product-img">
-						<img src="~/ui/img/product01.png" alt="">
-						<div class="product-label">
-							<span class="sale">-30%</span>
-						</div>
-					</div>
-					<div class="product-body">
-						<p class="product-category">Category</p>
-						<h3 class="product-name"><a href="#">product name goes here</a></h3>
-						<h4 class="product-price">$980.00 <del class="product-old-price">$990.00</del></h4>
-						<div class="product-rating">
-						</div>
-						<div class="product-btns">
-							<button class="add-to-wishlist"><i class="fa fa-heart-o"></i><span class="tooltipp">add to wishlist</span></button>
-							<button class="add-to-compare"><i class="fa fa-exchange"></i><span class="tooltipp">add to compare</span></button>
-							<button class="quick-view"><i class="fa fa-eye"></i><span class="tooltipp">quick view</span></button>
-						</div>
-					</div>
-					<div class="add-to-cart">
-						<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
-					</div>
-				</div>
-			</div>
-			<!-- /product -->
-			<!-- product -->
-			<div class="col-md-3 col-xs-6">
-				<div class="product">
-					<div class="product-img">
-						<img src="~/ui/img/product02.png" alt="">
-						<div class="product-label">
-							<span class="new">NEW</span>
-						</div>
-					</div>
-					<div class="product-body">
-						<p class="product-category">Category</p>
-						<h3 class="product-name"><a href="#">product name goes here</a></h3>
-						<h4 class="product-price">$980.00 <del class="product-old-price">$990.00</del></h4>
-						<div class="product-rating">
-							<i class="fa fa-star"></i>
-							<i class="fa fa-star"></i>
-							<i class="fa fa-star"></i>
-							<i class="fa fa-star"></i>
-							<i class="fa fa-star"></i>
-						</div>
-						<div class="product-btns">
-							<button class="add-to-wishlist"><i class="fa fa-heart-o"></i><span class="tooltipp">add to wishlist</span></button>
-							<button class="add-to-compare"><i class="fa fa-exchange"></i><span class="tooltipp">add to compare</span></button>
-							<button class="quick-view"><i class="fa fa-eye"></i><span class="tooltipp">quick view</span></button>
-						</div>
-					</div>
-					<div class="add-to-cart">
-						<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
-					</div>
-				</div>
-			</div>
-			<!-- /product -->
-
-			<div class="clearfix visible-sm visible-xs"></div>
-
-			<!-- product -->
-			<div class="col-md-3 col-xs-6">
-				<div class="product">
-					<div class="product-img">
-						<img src="~/ui/img/product03.png" alt="">
-					</div>
-					<div class="product-body">
-						<p class="product-category">Category</p>
-						<h3 class="product-name"><a href="#">product name goes here</a></h3>
-						<h4 class="product-price">$980.00 <del class="product-old-price">$990.00</del></h4>
-						<div class="product-rating">
-							<i class="fa fa-star"></i>
-							<i class="fa fa-star"></i>
-							<i class="fa fa-star"></i>
-							<i class="fa fa-star"></i>
-							<i class="fa fa-star-o"></i>
-						</div>
-						<div class="product-btns">
-							<button class="add-to-wishlist"><i class="fa fa-heart-o"></i><span class="tooltipp">add to wishlist</span></button>
-							<button class="add-to-compare"><i class="fa fa-exchange"></i><span class="tooltipp">add to compare</span></button>
-							<button class="quick-view"><i class="fa fa-eye"></i><span class="tooltipp">quick view</span></button>
-						</div>
-					</div>
-					<div class="add-to-cart">
-						<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
-					</div>
-				</div>
-			</div>
-			<!-- /product -->
-			<!-- product -->
-			<div class="col-md-3 col-xs-6">
-				<div class="product">
-					<div class="product-img">
-						<img src="~/ui/img/product04.png" alt="">
-					</div>
-					<div class="product-body">
-						<p class="product-category">Category</p>
-						<h3 class="product-name"><a href="#">product name goes here</a></h3>
-						<h4 class="product-price">$980.00 <del class="product-old-price">$990.00</del></h4>
-						<div class="product-rating">
-						</div>
-						<div class="product-btns">
-							<button class="add-to-wishlist"><i class="fa fa-heart-o"></i><span class="tooltipp">add to wishlist</span></button>
-							<button class="add-to-compare"><i class="fa fa-exchange"></i><span class="tooltipp">add to compare</span></button>
-							<button class="quick-view"><i class="fa fa-eye"></i><span class="tooltipp">quick view</span></button>
-						</div>
-					</div>
-					<div class="add-to-cart">
-						<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
-					</div>
-				</div>
-			</div>
-			<!-- /product -->
-
-		</div>
-		<!-- /row -->
-	</div>
-	<!-- /container -->
-</div>
-<!-- /Section -->
 
 
 
