--- a/RhythmicRealm/RhythmicRealm.UI/Views/Store/ShowProducts.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/Store/ShowProducts.cshtml
@@ -52,9 +52,14 @@
 										<a asp-area="" asp-controller="ProductDetails" asp-action="Index" asp-route-id="@product.Id" class="quick-view" style="cursor:pointer"><i class="fa fa-eye"></i><span class="tooltipp">İncele</span></a>
 									</div>
 								</div>
-								<div class="add-to-cart">
-									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> Sepete Ekle</button>
-								</div>
+								<form asp-area="" asp-controller="Basket" asp-action="AddToBasket" method="post">
+									<input type="hidden" name="productId" value="@product.Id" />
+									<input type="hidden" name="quantity" value="1" />
+									<div class="add-to-cart">
+										<button type="submit" class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> Sepete Ekle</button>
+									</div>
+								</form>
+								
 							</div>
 						</div>
 					}
