--- a/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Authorization/ViewPersons.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Authorization/ViewPersons.cshtml
@@ -6,7 +6,7 @@
         <div class="container-fluid">
 
             <div class="col-sm-6">
-                <h3>Müşteri Listesi</h3>
+                <h3>Kullanıcı Listesi</h3>
             </div>
 
         </div><!-- /.container-fluid -->
