--- a/RhythmicRealm/RhythmicRealm.UI/Views/Store/Index.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/Store/Index.cshtml
@@ -85,43 +85,60 @@
 				<!-- /store top filter -->
 				<!-- store products -->
 					<div class="row">
-					
-				@foreach (var product in Model.Products)
-					{
-						
-						<div class="col-md-4 col-xs-6">
-							<div class="product">
-								<div class="product-img">
-									<img src="~/images/products/@product.ImageUrl" alt="">
-									<div class="product-label">
-										<span class="sale">-30%</span>
-										<span class="new">NEW</span>
+					@{
+
+                   int counter = 0; 
+
+                   foreach (var product in Model.Products)
+                    {
+          
+           
+									<div class="col-md-4 col-xs-6">
+										<div class="product">
+											<div class="product-img">
+												<img src="~/images/products/@product.ImageUrl" alt="">
+												<div class="product-label">
+													<span class="sale">-30%</span>
+													<span class="new">NEW</span>
+												</div>
+											</div>
+											<div class="product-body">
+												<p class="product-category">@product.SubCategory.Name-@product.Brand.Name</p>
+												<h3 class="product-name"><a href="#">@product.Name</a></h3>
+												<h4 class="product-price">@($"{product.Price:C2}") <del class="product-old-price">@($"{product.Price + 2500:C2}")</del></h4>
+												<div class="product-rating">
+													<i class="fa fa-star"></i>
+													<i class="fa fa-star"></i>
+													<i class="fa fa-star"></i>
+													<i class="fa fa-star"></i>
+													<i class="fa fa-star"></i>
+												</div>
+												<div class="product-btns">
+													<a class="add-to-wishlist" style="cursor:pointer"><i class="fa fa-heart-o"></i><span class="tooltipp">Beğen</span></a>
+													<a asp-area="" asp-controller="ProductDetails" asp-action="Index" asp-route-id="@product.Id" class="quick-view" style="cursor:pointer"><i class="fa fa-eye"></i><span class="tooltipp">İncele</span></a>
+												</div>
+											</div>
+											<div class="add-to-cart">
+												<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> Sepete Ekle</button>
+											</div>
+										</div>
 									</div>
-								</div>
-								<div class="product-body">
-									<p class="product-category">@product.SubCategory.Name-@product.Brand.Name</p>
-									<h3 class="product-name"><a href="#">@product.Name</a></h3>
-									<h4 class="product-price">@($"{product.Price:C2}") <del class="product-old-price">@($"{product.Price+2500:C2}")</del></h4>
-									<div class="product-rating">
-										<i class="fa fa-star"></i>
-										<i class="fa fa-star"></i>
-										<i class="fa fa-star"></i>
-										<i class="fa fa-star"></i>
-										<i class="fa fa-star"></i>
-									</div>
-									<div class="product-btns">
-										<a class="add-to-wishlist" style="cursor:pointer"><i class="fa fa-heart-o"></i><span class="tooltipp">Beğen</span></a>
-										<a asp-area="" asp-controller="ProductDetails" asp-action="Index" asp-route-id="@product.Id" class="quick-view" style="cursor:pointer"><i class="fa fa-eye"></i><span class="tooltipp">İncele</span></a>
-									</div>
-								</div>
-								<div class="add-to-cart">
-									<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> Sepete Ekle</button>
-								</div>
-							</div>
-						</div>
-			        }
-				
-				</div>
+               
+            <!-- /product -->
+
+								counter++; 
+            
+								@if (counter % 3 == 0) 
+								{
+									<div class="clearfix visible-md visible-lg"></div>
+								}
+								@if (counter % 2 == 0) 
+								{
+									<div class="clearfix visible-sm visible-xs"></div>
+								}
+                    }
+				    }
+                    </div>
 				
 					<div class="alert alert-danger" role="alert">
 						@ViewBag.ErrorMessage
