Checkout view is ok

--- a/RhythmicRealm/RhythmicRealm.UI/Views/Shared/Components/Cart/Default.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/Shared/Components/Cart/Default.cshtml
@@ -35,14 +35,9 @@
 		</div>
 		<div class="cart-btns">
 			<a asp-area="" asp-controller="Basket" asp-action="Index">Sepeti Görüntüle</a>
-			@if (User.Identity.IsAuthenticated)
-			{
-				<a asp-area="" asp-controller="CheckOut" asp-action="Index" class="btn btn-danger btn-lg btn-block">Sepeti Onayla</a>
-			}
-			else
-			{
-				<a asp-area="" asp-controller="Account" asp-action="Login" class="btn btn-danger btn-lg btn-block">Sepeti Onayla</a>
-			}
+			<a asp-area="" asp-controller="CheckOut" asp-action="Checkout" class="btn btn-danger btn-lg btn-block">Sepeti Onayla</a>
+			
+			
 		</div>
 	</div>
 </div>
