--- a/RhythmicRealm/RhythmicRealm.UI/Views/Basket/Index.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/Basket/Index.cshtml
@@ -88,7 +88,7 @@
 										<div>
 											@if (User.Identity.IsAuthenticated)
 											{
-												<a asp-area="" asp-controller="CheckOut" asp-action="Index" class="btn btn-danger btn-lg btn-block">Sepeti Onayla</a>
+												<a asp-area="" asp-controller="CheckOut" asp-action="Checkout" class="btn btn-danger btn-lg btn-block">Sepeti Onayla</a>
 											}
 											else
 											{
