--- a/RhythmicRealm/RhythmicRealm.UI/Views/_ViewImports.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/_ViewImports.cshtml
@@ -6,5 +6,6 @@
 @using RhythmicRealm.Shared.ViewModels.Others
 @using RhythmicRealm.Shared.ViewModels.MessageViewModels
 @using RhythmicRealm.Shared.ViewModels.ShoppingBasketViewModels
+@using RhythmicRealm.Shared.ViewModels.OrderViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, RhythmicRealm.UI
