--- a/RhythmicRealm/RhythmicRealm.UI/Views/Shared/_HeaderPartial.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/Shared/_HeaderPartial.cshtml
@@ -12,7 +12,7 @@
 				<li><a asp-area="" asp-controller="AboutUs" asp-action="Index" target="_blank"> Hakkımızda</a></li>
 				<li><a asp-area="" asp-controller="Contact" asp-action="Index" target="_blank"> İletişim</a></li>
 			</ul>
-		
+
 		</div>
 	</div>
 	<!-- /TOP HEADER -->
@@ -22,7 +22,7 @@
 		<div class="container">
 			<!-- row -->
 			<div class="row">
-			
+
 				<div class="container-edit">
 					<div class="col-lg-2 col-md-2 col-sm-2 hidden-xs">
 
@@ -70,7 +70,8 @@
 
 									<vc:cart></vc:cart>
 								}
-								else{
+								else
+								{
 									<div>
 										<div class="dropdown text-center">
 											<a href="#" class="dropdown-toggle" data-toggle="dropdown" style="color:white" role="button" aria-haspopup="true" aria-expanded="false">
@@ -116,11 +117,11 @@
 									</a>
 
 								</div>
-						<vc:cart></vc:cart>
+							
 							}
 
 
-							
+
 							<!-- Menu Toogle -->
 							<div class="menu-toggle">
 								<a href="#">
@@ -132,8 +133,8 @@
 						</div>
 					</div>
 				</div>
-			
-			
+
+
 			</div>
 			<!-- row -->
 		</div>
@@ -142,5 +143,3 @@
 	<!-- /MAIN HEADER -->
 </header>
 <!-- /HEADER -->
-
-									
