--- a/RhythmicRealm/RhythmicRealm.UI/wwwroot/ui/css/style.css
+++ b/RhythmicRealm/RhythmicRealm.UI/wwwroot/ui/css/style.css
@@ -110,6 +110,7 @@ ul, ol {
 \*----------------------------*/
 
 .primary-btn {
+  width:100%;
   display: inline-block;
   padding: 12px 30px;
   background-color: #D10024;
