--- a/RhythmicRealm/RhythmicRealm.UI/Views/Shared/_HeaderPartial.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/Shared/_HeaderPartial.cshtml
@@ -81,7 +81,7 @@
 
 											</a>
 											<ul class="dropdown-menu">
-												<li><a href="#">Siparişlerim</a></li>
+												<li><a asp-area="" asp-controller="CheckOut" asp-action="GetOrders">Siparişlerim</a></li>
 												<li role="separator" class="divider"></li>
 												<li><a asp-area="" asp-controller="Account" asp-action="Profile">Kullanıcı Bilgilerim</a></li>
 												<li role="separator" class="divider"></li>
