--- a/RhythmicRealm/RhythmicRealm.UI/Views/Home/Index.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/Home/Index.cshtml
@@ -173,7 +173,7 @@
 					</ul>
 					<h2 class="text-uppercase">Yeni Ürünler </h2>
 					<p>Avantajlı Fiyatlar İle</p>
-					<a class="primary-btn cta-btn" href="#">Alışverişe Başla</a>
+					<a class="primary-btn2 cta-btn" href="#">Alışverişe Başla</a>
 				</div>
 			</div>
 		</div>
