--- a/RhythmicRealm/RhythmicRealm.UI/wwwroot/ui/css/style.css
+++ b/RhythmicRealm/RhythmicRealm.UI/wwwroot/ui/css/style.css
@@ -128,6 +128,25 @@ ul, ol {
   opacity: 0.9;
   color: #FFF;
 }
+.primary-btn2 {
+  
+    display: inline-block;
+    padding: 12px 30px;
+    background-color: #D10024;
+    border: none;
+    border-radius: 40px;
+    color: #FFF;
+    text-transform: uppercase;
+    font-weight: 700;
+    text-align: center;
+    -webkit-transition: 0.2s all;
+    transition: 0.2s all;
+}
+
+    .primary-btn2:hover, .primary-btn2:focus {
+        opacity: 0.9;
+        color: #FFF;
+    }
 
 /*----------------------------*\
 	Inputs
