order filtering by product is completed

--- a/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Shared/Components/MainSideBar/Default.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Shared/Components/MainSideBar/Default.cshtml
@@ -119,7 +119,7 @@
                     </a>
                     <ul class="nav nav-treeview">
                         <li class="nav-item">
-                            <a href="pages/tables/simple.html" class="nav-link">
+                            <a asp-area="Admin" asp-controller="Order" asp-action="Index" class="nav-link">
                                 <i class="fas fa-list"></i>
                                 <p>Sipariş Listesi</p>
                             </a>
