--- a/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/_ViewImports.cshtml
@@ -6,5 +6,6 @@
 @using RhythmicRealm.Entity.Concrete.Identity
 @using RhythmicRealm.Shared.ViewModels.Identity
 @using RhythmicRealm.Shared.ViewModels.MessageViewModels
+@using RhythmicRealm.Shared.ViewModels.OrderViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, RhythmicRealm.UI
